# HelloARVideoNative

./: .gitignore  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: targets.json
app/src/main/cpp/easyar/: ar.cc  helloarvideo.cc
app/src/main/java/cn/easyar/samples/helloarvideo/: MainActivity.java
app/src/main/java/io/weichao/activity/: PermissionActivity.java  SplashActivity.java
app/src/main/java/io/weichao/util/: MediaUtil.java
app/src/main/res/values/: strings.xml
